@@ -1,12 +1,40 @@
+# Pdman
+
+有需要的可以下载Pdman导入[项目数据](https://gitee.com/xmaozi/maozi-cloud-parent-script/tree/release/maozi-cloud-service/maozi-cloud-service-pdman)
+
+<img src="http://zs-dev01.oss-cn-shenzhen.aliyuncs.com/202306/cc19854e-0a13-4adb-b06d-66dcec6a366a.png" />
+
+<img src="http://zs-dev01.oss-cn-shenzhen.aliyuncs.com/202306/e4779e5c-9778-4abe-bec0-13db66906248.png" />
+
+<img src="http://zs-dev01.oss-cn-shenzhen.aliyuncs.com/202306/6133de91-6a29-4c18-a2d9-c2077998fa3c.png" />
+
+<br/>
+
+<br/>
+
+<br/>
+
+# ApiFox
+
+有需要的可以下载Apifox导入[项目数据](https://gitee.com/xmaozi/maozi-cloud-parent-script/blob/release/maozi-cloud-service/maozi-cloud-service-apifox/maozi-cloud-system.apifox.json)
+
+<img src="http://zs-dev01.oss-cn-shenzhen.aliyuncs.com/202306/38d4037f-e121-43d1-8949-e1c766a9305d.png" />
+
+<img src="http://zs-dev01.oss-cn-shenzhen.aliyuncs.com/202306/159c99f2-7ef8-4dfa-a581-5274aa62808c.png" />
+
+<br/>
+
+<br/>
+
 # 目录说明
 
 ```text
-maozi-cloud-user-dto                  (UserDataTransferObject)
-maozi-cloud-user-enum                 (User枚举)
-maozi-cloud-user-vo                   (UserViewObject)
-maozi-cloud-service-user              (User服务实现)
-maozi-cloud-service-rpc-api-user      (RPC接口)
-maozi-cloud-service-rest-api-user     (REST接口)
+maozi-cloud-system-dto                  (SystemDataTransferObject)
+maozi-cloud-system-enum                 (System枚举)
+maozi-cloud-system-vo                   (SystemViewObject)
+maozi-cloud-service-system              (System服务实现)
+maozi-cloud-service-rpc-api-system      (RPC接口)
+maozi-cloud-service-rest-api-system     (REST接口)
 ```
 
 <br/>
@@ -15,28 +43,28 @@ maozi-cloud-service-rest-api-user     (REST接口)
 
 <br/>
 
-**maozi-cloud-service-user目录**
+**maozi-cloud-service-system目录**
 
 ```text
 com.maozi.                                          
-  UserApplication.java                              (启动类)
-  user.                                             (父模块User)  
+  SystemApplication.java                            (启动类)
+  system.                                           (父模块System)  
     permission.                                     (子模块permission)
-    user.                                           (子模块user)
+    system.                                         (子模块system)
       api.
-        UserService.java                            (子模块服务接口)
+        SystemService.java                          (子模块服务接口)
         impl.                        
-          UserServiceImpl.java                      (子模块服务接口实现)
+          SystemServiceImpl.java                    (子模块服务接口实现)
           rpc.
             v1.
-              UserServiceRpcV1Impl.java             (RPC V1 接口实现)
+              SystemServiceRpcV1Impl.java           (RPC V1 接口实现)
             v2.                                     (RPC V2 接口实现)
           rest.
             v1.
               app.
-                UserServiceRestV1AppImpl.java       (APP HTTP V1 接口实现)
+                SystemServiceRestV1AppImpl.java     (APP HTTP V1 接口实现)
               pc.
-                UserServiceRestV1PcImpl.java        (PC HTTP V1 接口实现)
+                SystemServiceRestV1PcImpl.java      (PC HTTP V1 接口实现)
       utils.                                        (工具)
       domain.                                       (domain object)
       mapper.                                       (domain mapper)
@@ -49,12 +77,12 @@ com.maozi.
 
 <br/>
 
-**maozi-cloud-service-rest-api-user目录**
+**maozi-cloud-service-rest-api-system目录**
 
 ```
-com.maozi.user.                       (父模块)
+com.maozi.system.                     (父模块)
   permission.                         (子模块)
-  user.                               (子模块)
+  system.                             (子模块)
     api.rest.                      
       v1.                               
         app.                          (APP HTPP V1 接口)
@@ -66,12 +94,12 @@ com.maozi.user.                       (父模块)
 
 <br/>
 
-**maozi-cloud-service-rpc-api-user目录**
+**maozi-cloud-service-rpc-api-system目录**
 
 ```
-com.maozi.user.                       (父模块)
+com.maozi.system.                     (父模块)
   permission.                         (子模块)
-  user.                               (子模块)
+  system.                             (子模块)
     api.rpc.                      
       v1.                             (RPC V1 接口)
       v2.                             (RPC V2 接口)
@@ -81,12 +109,12 @@ com.maozi.user.                       (父模块)
 
 <br/>
 
-**maozi-cloud-user-enum目录**
+**maozi-cloud-system-enum目录**
 
 ```
-com.maozi.user.                       (父模块)
+com.maozi.system.                     (父模块)
   permission.                         (子模块)
-  user.                               (子模块)
+  system.                             (子模块)
     enums                      
       v1.                             (V1 枚举)
       v2.                             (V2 枚举)
@@ -96,12 +124,12 @@ com.maozi.user.                       (父模块)
 
 <br/>
 
-**maozi-cloud-user-vo目录**
+**maozi-cloud-system-vo目录**
 
 ```
-com.maozi.user.                       (父模块)
+com.maozi.system.                     (父模块)
   permission.                         (子模块)
-  user.                               (子模块)
+  system.                             (子模块)
     vo                      
       v1.                             
         app.                          (App V1 ViewObject)
@@ -113,12 +141,12 @@ com.maozi.user.                       (父模块)
 
 <br/>
 
-**maozi-cloud-user-dto目录**
+**maozi-cloud-system-dto目录**
 
 ```
-com.maozi.user.                       (父模块)
+com.maozi.system.                     (父模块)
   permission.                         (子模块)
-  user.                               (子模块)
+  system.                             (子模块)
     dto
       rest.
         v1.                             
@@ -139,9 +167,9 @@ com.maozi.user.                       (父模块)
 
 # 数据库导入
 
-数据库名字：maozi-cloud-user-localhost-db
+数据库名字默认为：maozi-cloud-system-localhost-db
 
-maozi-cloud-user为父级目录名字
+maozi-cloud-system为父级目录名字
 
 localhost为Nacos配置中cloud-default.yml里面的
 
@@ -164,135 +192,7 @@ maozi-cloud-sso-production-db
 
 <br/>
 
-<br/>
-
-```sql
-/*
-SQLyog Trial v13.1.8 (64 bit)
-MySQL - 8.0.27 : Database - maozi-cloud-user-localhost-db
-*********************************************************************
-*/
-
-/*!40101 SET NAMES utf8 */;
-
-/*!40101 SET SQL_MODE=''*/;
-
-/*!40014 SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0 */;
-/*!40101 SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='NO_AUTO_VALUE_ON_ZERO' */;
-/*!40111 SET @OLD_SQL_NOTES=@@SQL_NOTES, SQL_NOTES=0 */;
-CREATE DATABASE /*!32312 IF NOT EXISTS*/`maozi-cloud-user-localhost-db` /*!40100 DEFAULT CHARACTER SET utf8mb4 COLLATE utf8mb4_0900_ai_ci */ /*!80016 DEFAULT ENCRYPTION='N' */;
-
-USE `maozi-cloud-user-localhost-db`;
-
-/*Table structure for table `sys_permission` */
-
-CREATE TABLE `sys_permission` (
-  `parent_id` bigint DEFAULT NULL COMMENT '父ID',
-  `name` varchar(255) DEFAULT NULL COMMENT '权限名称',
-  `enname` varchar(255) DEFAULT NULL COMMENT '权限编码',
-  `url` varchar(255) DEFAULT NULL,
-  `id` bigint NOT NULL,
-  `create_by` bigint DEFAULT NULL COMMENT '创建人',
-  `deleted` int DEFAULT '0' COMMENT '逻辑删除键',
-  `version` int DEFAULT '0' COMMENT '版本号',
-  `create_time` bigint DEFAULT NULL COMMENT '创建时间',
-  `update_time` bigint DEFAULT NULL COMMENT '更新时间',
-  PRIMARY KEY (`id`)
-) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci COMMENT='权限';
-
-/*Data for the table `sys_permission` */
-
-/*Table structure for table `sys_role` */
-
-CREATE TABLE `sys_role` (
-  `parent_id` int DEFAULT NULL COMMENT '父id',
-  `name` varchar(255) DEFAULT NULL COMMENT '角色名称',
-  `id` bigint NOT NULL,
-  `create_by` bigint DEFAULT NULL COMMENT '创建人',
-  `deleted` int DEFAULT '0' COMMENT '逻辑删除键',
-  `version` int DEFAULT '0' COMMENT '版本号',
-  `create_time` bigint DEFAULT NULL COMMENT '创建时间',
-  `update_time` bigint DEFAULT NULL COMMENT '更新时间',
-  PRIMARY KEY (`id`)
-) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci COMMENT='角色';
-
-/*Data for the table `sys_role` */
-
-/*Table structure for table `sys_role_permission` */
-
-CREATE TABLE `sys_role_permission` (
-  `role_id` bigint DEFAULT NULL COMMENT '角色ID',
-  `permission_id` bigint DEFAULT NULL COMMENT '权限ID',
-  `id` bigint NOT NULL,
-  `create_by` bigint DEFAULT NULL COMMENT '创建人',
-  `deleted` int DEFAULT '0' COMMENT '逻辑删除键',
-  `version` int DEFAULT '0' COMMENT '版本号',
-  `create_time` bigint DEFAULT NULL COMMENT '创建时间',
-  `update_time` bigint DEFAULT NULL COMMENT '更新时间',
-  PRIMARY KEY (`id`)
-) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci COMMENT='角色权限中间表';
-
-/*Data for the table `sys_role_permission` */
-
-/*Table structure for table `sys_user` */
-
-CREATE TABLE `sys_user` (
-  `username` varchar(255) DEFAULT NULL COMMENT '登录账号',
-  `password` varchar(255) DEFAULT NULL COMMENT '密码',
-  `role_id` bigint DEFAULT NULL COMMENT '角色',
-  `status` bigint DEFAULT '0' COMMENT '0-启用/1-禁用',
-  `id` bigint NOT NULL,
-  `create_by` bigint DEFAULT NULL COMMENT '创建人',
-  `deleted` int DEFAULT '0' COMMENT '逻辑删除键',
-  `version` int DEFAULT '0' COMMENT '版本号',
-  `create_time` bigint DEFAULT NULL COMMENT '创建时间',
-  `update_time` bigint DEFAULT NULL COMMENT '更新时间',
-  PRIMARY KEY (`id`)
-) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci COMMENT='用户';
-
-/*Data for the table `sys_user` */
-
-insert  into `sys_user`(`username`,`password`,`role_id`,`status`,`id`,`create_by`,`deleted`,`version`,`create_time`,`update_time`) values 
-('admin','{MD5}{WxUwIbyfYWqR/dn2H8j00YZWxPmq6bYYus/Ga/iEQGs=}1caa986c31b5a250c6ad34979153ee7e',NULL,0,1560003674365558786,NULL,0,0,1660768834093,NULL);
-
-/*Table structure for table `sys_user_role` */
-
-CREATE TABLE `sys_user_role` (
-  `role_id` bigint DEFAULT NULL,
-  `user_id` bigint DEFAULT NULL,
-  `id` bigint NOT NULL,
-  `create_by` bigint DEFAULT NULL COMMENT '创建人',
-  `deleted` int DEFAULT '0' COMMENT '逻辑删除键',
-  `version` int DEFAULT '0' COMMENT '版本号',
-  `create_time` bigint DEFAULT NULL COMMENT '创建时间',
-  `update_time` bigint DEFAULT NULL COMMENT '更新时间',
-  PRIMARY KEY (`id`)
-) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;
-
-/*Data for the table `sys_user_role` */
-
-/*Table structure for table `undo_log` */
-
-CREATE TABLE `undo_log` (
-  `branch_id` bigint NOT NULL COMMENT 'branch transaction id',
-  `xid` varchar(100) NOT NULL COMMENT 'global transaction id',
-  `context` varchar(128) NOT NULL COMMENT 'undo_log context,such as serialization',
-  `rollback_info` longblob NOT NULL COMMENT 'rollback info',
-  `log_status` int NOT NULL COMMENT '0:normal status,1:defense status',
-  `log_created` datetime(6) NOT NULL COMMENT 'create datetime',
-  `log_modified` datetime(6) NOT NULL COMMENT 'modify datetime',
-  `id` int NOT NULL AUTO_INCREMENT,
-  PRIMARY KEY (`id`),
-  UNIQUE KEY `ux_undo_log` (`xid`,`branch_id`)
-) ENGINE=InnoDB AUTO_INCREMENT=129 DEFAULT CHARSET=utf8mb3 COMMENT='AT transaction mode undo table';
-
-/*Data for the table `undo_log` */
-
-/*!40101 SET SQL_MODE=@OLD_SQL_MODE */;
-/*!40014 SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS */;
-/*!40111 SET SQL_NOTES=@OLD_SQL_NOTES */;
-
-```
+**若需要修改数据库名则看到下面的Nacos配置篇**
 
 <br/>
 
@@ -304,7 +204,7 @@ CREATE TABLE `undo_log` (
 
 **所以先将以下项目编译了**
 
-**maozi-cloud-sso/maozi-cloud-sso-user**
+**maozi-cloud-sso/maozi-cloud-sso-system**
 
 <br/>
 
@@ -320,7 +220,7 @@ CREATE TABLE `undo_log` (
 
 **Nacos地址默认为localhost:8081，若不是则添加环境变量NACOS_CONFIG_SERVER**
 
-或找到 maozi-cloud-service-user/src/main/resources/bootstrap.properties 添加
+或找到 maozi-cloud-service-system/src/main/resources/bootstrap.properties 添加
 
 ```
 spring.cloud.nacos.config.server-addr=localhost:8081
@@ -328,7 +228,7 @@ spring.cloud.nacos.config.server-addr=localhost:8081
 
 <br/>
 
-Nacos找到 **maozi-cloud-user.yml** 配置
+Nacos找到 **maozi-cloud-system.yml** 配置
 
 ```yaml
 # 端口
@@ -336,12 +236,29 @@ application-port: 2000
 
 #数据库配置,这里的值都是默认值,如果值没变可以将以下数据库配置注释掉
 application-datasource-jdbc-url: localhost:3306
-application-datasource-jdbc-username: root
+application-datasource-jdbc-systemname: root
 application-datasource-jdbc-password: password
+application-datasource-db-name: maozi-cloud-system-localhost-db
 
 # 白名单
 application-project-whitelist: /user/pc/v1/login
 ```
+
+<br/>
+
+<br/>
+
+<br/>
+
+## 设置Jvm VM参数
+
+**因为用的是JDK17 所以要设置以下VM餐宿**
+
+```text
+--add-opens java.base/java.math=ALL-UNNAMED  --add-opens java.base/java.lang=ALL-UNNAMED  --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+```
+
+<br/>
 
 <br/>
 
@@ -352,14 +269,7 @@ application-project-whitelist: /user/pc/v1/login
 <br/>
 
 ```
-[ 2023-03-03 00:10:17 ]  [ level：INFO ]  [ TID: N/A ]  [ app：null ]  [ environment：null ]  [ No active profile set, falling back to 1 default profile: "default" ]
-log4j:WARN No appenders could be found for logger (org.apache.dubbo.common.Version).
-log4j:WARN Please initialize the log4j system properly.
-log4j:WARN See http://logging.apache.org/log4j/1.2/faq.html#noconfig for more info.
-Java HotSpot(TM) 64-Bit Server VM warning: Sharing is only supported for boot loader classes because bootstrap classpath has been appended
-[ 2023-03-03 00:11:21 ]  [ level：INFO ]  [ TID: N/A ]  [ app：maozi-cloud-user ]  [ environment：localhost ]  [ Started UserApplication in 71.894 seconds (JVM running for 73.315) ]
-[ 2023-03-03 00:11:21 ]  [ level：INFO ]  [ TID: N/A ]  [ app：maozi-cloud-user ]  [ environment：localhost ]  [ uptime：72469 ms ]  [ config：cloud-default.yml,cloud-nacos.yml,cloud-dubbo.yml,boot-admin.yml,api-whitelist.yml,cloud-security.yml,boot-redis.yml,boot-swagger.yml,boot-arthas.yml,cloud-sentinel.yml,boot-datasource.yml,boot-mybatisplus.yml ]  [ nacosAddr：127.0.0.1:8848 net ]  [ subscribe：null ]
-
+[ 2023-03-03 00:11:21 ]  [ level：INFO ]  [ TID: N/A ]  [ maozi-cloud-service：maozi-cloud-system ]  [ environment：localhost ]  [ uptime：72469 ms ]  [ config：cloud-default.yml,cloud-nacos.yml,cloud-dubbo.yml,boot-admin.yml,api-whitelist.yml,cloud-security.yml,boot-redis.yml,boot-swagger.yml,boot-arthas.yml,cloud-sentinel.yml,boot-datasource.yml,boot-mybatisplus.yml ]  [ nacosAddr：127.0.0.1:8848 net ]  [ subscribe：null ]
 ```
 
 <br/>
@@ -375,3 +285,5 @@ Java HotSpot(TM) 64-Bit Server VM warning: Sharing is only supported for boot lo
 username=admin
 
 password=812840531zhang
+
+或者使用ApiFox跑一次全流程测试用例
